welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:2: error: not found: value isWeekEnd
  if (isWeekEnd==true){if(40<=cigars){return true};return false}
      ^